# oee

./: .gitignore  main.py  pyproject.toml  test.py
data/: start_beam.xlsx  textile_days.xlsx
db/: oee.db
oee-ingestion/: main.py  pyproject.toml
oee-ingestion/src/oee_ingestion/: config.py  excel.py  normalization.py  pipeline.py
oee-ingestion/src/oee_ingestion/extractors/: beam.py  textile_days.py
