[project]
name = "oee-ingestion"
version = "0.1.0"
description = "OEE ingestion pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"